--- a/src/html/app.component.html
+++ b/src/html/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <h1>The Awesome Amazing Fantastic Super Awesome Zoo!</h1>
   <animal-list [childAnimalList]="masterAnimalList"></animal-list>
+  <add-animal (addAnimalSender)="addAnimal($event)"></add-animal>
 </div>
