Finish animal edit component.

--- a/src/html/animalList.component.html
+++ b/src/html/animalList.component.html
@@ -1,6 +1,6 @@
 <div class="animal-list">
   <div class="animal" *ngFor="let animal of childAnimalList">
-    <h3>{{animal.name}}</h3>
+    <h3>{{animal.name}}</h3> <button type="button" name="button" (click)="editButtonClicked(animal)">Edit</button>
     <div class="details">
       <p>Name: {{animal.species}}</p>
       <p>Age: {{animal.age}}</p>
