--- a/src/html/addAnimal.component.html
+++ b/src/html/addAnimal.component.html
@@ -1,10 +1,10 @@
 <div class="add-animal">
   <input type="text" #species placeholder="Species">
   <input type="text" #name placeholder="Animal Name">
-  <input type="text" #age placeholder="Animal Age">
+  <input type="number" #age placeholder="Animal Age">
   <input type="text" #diet placeholder="Diet">
   <input type="text" #location placeholder="Location">
-  <input type="text" #caretakers placeholder="Number of Caretakers">
+  <input type="number" #caretakers placeholder="Number of Caretakers">
   <input type="text" #sex placeholder="Sex">
   <input type="text" #likes placeholder="Likes">
   <input type="text" #dislikes placeholder="Dislikes">
