--- a/resources/styles/master.scss
+++ b/resources/styles/master.scss
@@ -1,1 +1,43 @@
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.add-animal {
+  border: 2px solid black;
+  width: 200px;
+  position: absolute;
+  right: 40px;
+  top: 160px;
+}
 
+.animal-list {
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.animal {
+  border: 2px solid black;
+  margin: 5px;
+  padding: 2px;
+  height: 420px;
+}
+
+button {
+  border-radius: 5px;
+}
+
+.title {
+  font-size: 50px;
+  margin-top: 0px;
+}
+
+.filter {
+  width: 200px;
+}
+
+.search {
+  margin-left: 300px;
+}
