--- a/src/html/addAnimal.component.html
+++ b/src/html/addAnimal.component.html
@@ -1,5 +1,5 @@
 <div class="add-animal">
-  <h1>Add Animal</h1>
+  <h1 class="add-title">Add Animal</h1>
   <label>Species</label>
   <input type="text" #species placeholder="Species">
   <label>Name</label>
