--- a/src/html/animalEdit.component.html
+++ b/src/html/animalEdit.component.html
@@ -1,7 +1,10 @@
 <div class="edit-animal" *ngIf="childSelectedAnimal">
-  <input type="text" #newName placeholder="Edit Name">
-  <input type="text" #newAge placeholder="Edit Age">
-  <input type="number" #newCaretakers placeholder="Edit Caretakers">
+  <label>Edit Name</label>
+  <input type="text" #newName placeholder="Edit Name" [value]="childSelectedAnimal.name">
+  <label>Edit Age</label>
+  <input type="text" #newAge placeholder="Edit Age" [value]="childSelectedAnimal.age">
+  <label>Edit Caretakers</label>
+  <input type="number" #newCaretakers placeholder="Edit Caretakers" [value]="childSelectedAnimal.caretakers">
   <button type="button" name="button" (click)="childEditAnimal(newName.value, newAge.value, newCaretakers.value)">Submit</button>
   <button type="button" name="button" (click)="doneButtonClicked()">Done</button>
 </div>
